--- a/Introduccion/1_TiposDatos/ejercicio/ejercicios.ipynb
+++ b/Introduccion/1_TiposDatos/ejercicio/ejercicios.ipynb
@@ -49,7 +49,7 @@
       "execution_count": 2,
       "metadata": {
         "id": "S-JDll4__9ZA",
-        "outputId": "285f18ca-7243-4ef3-fe94-8b1879ff719d",
+        "outputId": "5fa3be1a-aa6b-44cf-dd56-a32e8434e096",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -68,6 +68,31 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "print(string.replace('|','\\n'))"
+      ],
+      "metadata": {
+        "id": "0Anlq4FQcf_V",
+        "outputId": "3cbccb8e-bef2-431a-9737-d74c0e9a0174",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Sinopsis \n",
+            " Marty McFly, un típico adolescente americano de los años ochenta, es accidentalmente enviado de vuelta a 1955 en una \"máquina del tiempo\" realizada conun DeLorean inventada por un científico un poco loco. \n",
+            " En este viaje, Marty debe asegurarse de que sus padres se encuentren y se enamoren, para que pueda volver a su tiempo. \n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "WR5pRiH3_9ZD"
@@ -80,7 +105,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "id": "9pGrRm4B_9ZE"
       },
@@ -91,36 +116,68 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "id": "PuN3KLdB_9ZG"
       },
       "outputs": [],
       "source": [
-        "# 1. Transformar el string a \"title case\""
+        "# 1. Transformar el string a \"title case\"\n",
+        "titulo=titulo.upper()"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
-        "id": "t_p2fgdr_9ZK"
+        "id": "t_p2fgdr_9ZK",
+        "outputId": "28ae7ba0-b4c2-4315-ea96-df5ab677ee08",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['VOLVER', 'AL', 'FUTURO']\n"
+          ]
+        }
+      ],
       "source": [
-        "# 2. Crear una lista con todas las palabras del string"
+        "# 2. Crear una lista con todas las palabras del string\n",
+        "lista = titulo.split()\n",
+        "print(lista)\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
-        "id": "leJ7MZGd_9ZL"
+        "id": "leJ7MZGd_9ZL",
+        "outputId": "e397a7f3-dd16-4faf-dcad-21dae4a56235",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "VAF\n"
+          ]
+        }
+      ],
       "source": [
         "# 3. Recorrer la lista y agregar al acrónimo la primera letra de cada palabra\n",
-        "acronimo = ''"
+        "\n",
+        "acronimo = ''\n",
+        "for palabra in lista:\n",
+        "  acronimo = acronimo+palabra[0]\n",
+        "\n",
+        "print(acronimo)"
       ]
     },
     {
@@ -136,9 +193,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        ""
-      ],
+      "source": [],
       "metadata": {
         "id": "SwHvDZHUD9ak"
       },
@@ -164,9 +219,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        ""
-      ],
+      "source": [],
       "metadata": {
         "id": "0BNXso5oG2yd"
       },
@@ -176,21 +229,11 @@
   ],
   "metadata": {
     "kernelspec": {
-      "display_name": "conda_python3",
-      "language": "python",
-      "name": "conda_python3"
+      "display_name": "Python 3",
+      "name": "python3"
     },
     "language_info": {
-      "codemirror_mode": {
-        "name": "ipython",
-        "version": 3
-      },
-      "file_extension": ".py",
-      "mimetype": "text/x-python",
-      "name": "python",
-      "nbconvert_exporter": "python",
-      "pygments_lexer": "ipython3",
-      "version": "3.6.10"
+      "name": "python"
     },
     "colab": {
       "name": "ejercicios.ipynb",
