--- a/Introduccion/1_TiposDatos/ejercicio/ejercicios.ipynb
+++ b/Introduccion/1_TiposDatos/ejercicio/ejercicios.ipynb
@@ -73,11 +73,11 @@
         "print(string.replace('|','\\n'))"
       ],
       "metadata": {
-        "id": "0Anlq4FQcf_V",
-        "outputId": "3cbccb8e-bef2-431a-9737-d74c0e9a0174",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "0Anlq4FQcf_V",
+        "outputId": "3cbccb8e-bef2-431a-9737-d74c0e9a0174"
       },
       "execution_count": 3,
       "outputs": [
@@ -131,10 +131,10 @@
       "execution_count": 9,
       "metadata": {
         "id": "t_p2fgdr_9ZK",
-        "outputId": "28ae7ba0-b4c2-4315-ea96-df5ab677ee08",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "28ae7ba0-b4c2-4315-ea96-df5ab677ee08"
       },
       "outputs": [
         {
@@ -156,10 +156,10 @@
       "execution_count": 11,
       "metadata": {
         "id": "leJ7MZGd_9ZL",
-        "outputId": "e397a7f3-dd16-4faf-dcad-21dae4a56235",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "e397a7f3-dd16-4faf-dcad-21dae4a56235"
       },
       "outputs": [
         {
@@ -193,12 +193,33 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "import random\n",
+        "\n",
+        "# Asignamos el valor a la variable numero\n",
+        "numero = random.randint(0, 100)\n",
+        "if numero%2 == 0:\n",
+        "  print(f'El número {numero} es par')\n",
+        "else:\n",
+        "  print(f'El número {numero} es impar')"
+      ],
       "metadata": {
-        "id": "SwHvDZHUD9ak"
+        "id": "SwHvDZHUD9ak",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a578fbcc-71fd-449e-8f6c-a9359c0956b1"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "El número 56 es par\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -219,12 +240,36 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "elementos = range(4,10)\n",
+        "pares = []\n",
+        "impares = []\n",
+        "\n",
+        "for x in elementos:\n",
+        "  if x%2 == 0:\n",
+        "    pares.append(x)\n",
+        "  else:\n",
+        "    impares.append(x)\n",
+        "print(f'Lista de impares es: {impares}\\nLista de pares es: {pares}')"
+      ],
       "metadata": {
-        "id": "0BNXso5oG2yd"
+        "id": "0BNXso5oG2yd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f15f3c6e-3cf4-4678-cada-30842c039910"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Lista de impares es: [5, 7, 9]\n",
+            "Lista de pares es: [4, 6, 8]\n"
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
